--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ DEFAULT_LANG }}">
+<html lang="{{ DEFAULT_LANG }}" itemscope itemtype="http://schema.org/Person">
 
 <head>
 {% block head %}
@@ -13,8 +13,10 @@
 
     <!-- schema.org -->
     <meta itemprop="name" content="{{ SITENAME }}">
-    <meta itemprop="image" content="{{ AVATAR}}">
-    <meta itemprop="description" content="{{ AUTHOR_DESCRIPTION }}">
+    <link itemprop="image" href="{{ AVATAR}}">
+    <meta itemprop="description" content="">
+
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
