--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: #203046;
-    font-size: 16px;
-   font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    font-family: 'Lato', sans-serif;
     color: ghostwhite;
 
 }
