--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/style.css" type="text/css" />
     
     <link rel="stylesheet" href="style.css" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
 
     <script src="https://use.fontawesome.com/bfa55e5fc4.js"></script>
     <meta name="twitter:card" content="summary">
